<resources>
    <string name="app_name">Assistant</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="desc">desc</string>
    <string name="sliding_menu_storage_path">Storage Path</string>
    <string name="sliding_menu_clear_history">Clear History</string>
    <string name="sliding_menu_introduce">App Introduce</string>
    <string name="sliding_menu_setting">User Setting</string>
    <string name="sliding_menu_feedback">Feed Back</string>
    <string name="sliding_menu_invite">Invite Friends</string>
    <string name="sliding_menu_assistant">Phone Assistant</string>
    <string name="sliding_menu_about">About</string>
    <string name="sliding_menu_update">Update</string>
    <string name="info_load">Information</string>
    <string name="title_application">Application</string>
    <string name="title_games">Games</string>
    <string name="title_camera">Camera</string>
    <string name="title_photo">Photo</string>
    <string name="title_video">Media</string>
    <string name="other_music">Music</string>
    <string name="title_type">Type</string>
    <string name="title_all">All</string>
    <string name="title_file">File</string>
    <string name="title_history">History</string>
    <string name="type_other">Others</string>
    <string name="bt_connect">Connect to mobilephone</string>
    <string name="bt_back">back</string>
    <string name="bt_creatAP">CreatAP</string>
    <string name="txt_creatAP_introduce">Other mobiles will connect to the AP which i had created</string>
    <string name="bt_searchAP">Search AP</string>
    <string name="txt_searchAP_introduce">I will connect to the AP by searching</string>
    <string name="bt_cancel">Cancel</string>
    <string name="bt_send">Send</string>
    <string name="tv_creat_success">creat AP success</string>
    <string name="tv_wait_for_connect">wait for connecttion</string>
    <string name="pic_bt_camara">Camara</string>
    <string name="pic_bt_all">All</string>
    <string name="media_bt_music">Music</string>
    <string name="media_bt_video">Video</string>
    <string name="bt_send_music">send</string>
    <string name="btn_return">return</string>
    <string name="btn_next">next</string>
    <string name="dialog_tips">tips</string>
    <string name="welcome_btn_login">login</string>
    <string name="login_hint_nickname">nickname</string>
    <string name="login_text_onlinestate">onlinestate</string>
    <string name="login_text_birthday">date of birth</string>
    <string name="login_text_age">age</string>
    <string name="login_text_birthdaytips">Reminder: your date of birth will not appear in the personal data.</string>
    <string name="login_text_selectsex">Sex select</string>
    <string name="login_text_male">man</string>
    <string name="login_text_female">woman</string>
    <string name="login_text_lastlogin">last login:</string>
    <string name="login_text_changeuser">change user</string>
    <string name="category_all">All</string>
    <string name="category_apk">APKs</string>
    <string name="category_document">Docs</string>
    <string name="category_favorite">Favorites</string>
    <string name="category_music">Music</string>
    <string name="category_other">Misc</string>
    <string name="category_picture">Pics</string>
    <string name="category_theme">Themes</string>
    <string name="category_video">Videos</string>
    <string name="category_zip">Zips</string>
    <string name="no_file">No files</string>
    <string name="enable_sd_card">SD card is not available, please connect one</string>
    <string name="sd_folder">SD card</string>
    <string name="preference_title">General Settings</string>
    <string name="pref_primary_folder">Home folder</string>
    <string name="pref_read_root">Read root</string>
    <string name="pref_show_real_path">Display real path</string>
    <string name="default_primary_folder">/mnt/sdcard</string>
    <string name="pref_primary_folder_summary">The folder that appears when the app starts, and current value is</string>
    <string name="pref_show_real_path_summary">Show real path in navigation bar</string>
    <string name="operation_move">Move</string>
    <string name="operation_moving">Moving...</string>
    <string name="operation_paste">Paste</string>
    <string name="operation_pasting">Pasting...</string>
    <string name="operation_refresh">Refresh</string>
    <string name="operation_rename">Rename</string>
    <string name="operation_rename_message">Enter a new name</string>
    <string name="operation_selectall">Select All</string>
    <string name="operation_send">Send</string>
    <string name="dialog_select_type">Select file type</string>
    <string name="dialog_type_text">Text</string>
    <string name="dialog_type_audio">Audio</string>
    <string name="dialog_type_video">Video</string>
    <string name="dialog_type_image">Image</string>
    <string name="tab_category">Browse</string>
    <string name="other_media">movie</string>
    <string name="other_media_introduce">support rmvb,mkv,mov,flv</string>
    <string name="other_doc">office</string>
    <string name="other_doc_introduce">support word,ppt,excel,wps</string>
    <string name="other_text">ebook</string>
    <string name="other_text_introduce">support txt,chm,ebk,umd</string>
    <string name="other_apk">apk</string>
    <string name="other_apk_introduce">support apk</string>
    <string name="other_zip">zip</string>
    <string name="other_zip_introduce">support rar,zip,iso,7z</string>
    <string name="other_largefile">big file</string>
    <string name="other_largefile_introduce">Support all files whitch size is larger than 50M</string>
    <string name="popup_content">Are yout sure you want to quit？</string>
    <string name="update_toast_no_sdcard">Installation file cannot be downloaded. Please check whether the SD card is mounted</string>
    <string name="dialog_checking">Checking. Please wait...</string>
    <string name="dialog_system_tip">System reminder</string>
    <string name="dialog_is_latest_version">Current version is the latest</string>
    <string name="dialog_cannot_get_version_info">Cannot obtain version updating information</string>
    <string name="dialog_title_update_tip">Software version updates</string>
    <string name="dialog_update_now">Update immediately</string>
    <string name="dialog_update_afterwards">Later</string>
    <string name="dialog_dowloading">Downloading the latest version</string>
    <string name="yes">OK</string>
    <string name="ok">OK</string>
    <string name="canceled">Canceled</string>
    <string name="weichuang">vsend</string>
    <string name="muiltscreen">muiltcast</string>
    <string name="chat">chatting</string>
    <string name="quickbackup">backup</string>
    <string name="chat_title">Chatting</string>
    <string name="chat_back_home">home</string>
    <string name="chatuser">User</string>
    <string name="chatgroup">Group</string>
    <string name="begin_group_chat">begin group chat</string>
    <string name="info_feedback_detail">Please fill in your Suggestions and ideas</string>
    <string name="info_contact">contact</string>
    <string name="info_contact_detail">Telephone, QQ, email, etc., we can way to get a hold of you</string>
    <string name="bt_sure">OK</string>
    <string name="media_tv_music">music</string>
    <string name="media_tv_video">video</string>
    <string name="bt_disconnect">disconnect</string>
    <string name="other_video">video film</string>
    <string name="other_video_introduce">Support MP3, WMA, WAV, APE format, etc.</string>
    <string name="bt_sending">sending</string>
    <string name="bt_install">install</string>
    <string name="bt_installing">installing</string>
    <string name="me">me</string>
    <string name="waiting">Waiting for device to join.</string>
    <string name="title_set_head">Set head</string>
    <string name="title_set_profile">Set up the personal information</string>
    <string name="bt_save">Save</string>
    <string name="bt_submit">sumbmit</string>
    <string name="toast_title_prompt">prompt</string>
    <string name="toast_sendContentEmpty">Send the content is empty</string>
    <string name="toast_connectApPrompt">Need to create a connection or join a connection before sending</string>
    <string name="toast_closeApPrompt">Sure you want to close the connection?</string>
    <string name="toast_closeApSuccessPrompt">Connection has been disconnected</string>
    <string name="toast_inputYourNickname">Please enter your nickname</string>
    <string name="toast_doFailAndRestart">Operation failed, please try to restart the program.</string>
    <string name="empty_file">There is no file</string>
    <string name="empty_history">No historical record</string>
    <string name="toast_exitAppPrompt">Confirm the exit?</string>
    <string name="toast_cleanHistory">Confirm clear history?</string>
    <string name="toast_cleanHistoryAndFile">Make sure the clear history and receive file?</string>
    <string name="clean_history">Clear history</string>
    <string name="clean_history_and_file">Clear history and received files</string>
    <string name="clean_all">clean all</string>
    <string name="storage_SD">SD card</string>
    <string name="storage_phone">Cell phone store</string>
    <string name="title_profile">Personal information</string>
    <string name="profile_head">head</string>
    <string name="profile_name">user name</string>
    <string name="profile_text_limit">You enter the word can not be more than 8!</string>
    <string name="mainlayout_creatap">Create AP</string>
    <string name="mainlayout_connectap">Search AP</string>
    <string name="mainlayout_title">VTransfer</string>
    <string name="mainlayout_module_transfer">VTransfer</string>
    <string name="mainlayout_module_share">ScreenShare</string>
    <string name="mainlayout_module_chatting">Chatting</string>
    <string name="mainlayout_module_exchangephone">PhoneExhange</string>
    <string name="mainlayout_module_blog">Blog</string>
    <string name="mainlayout_connect_create_ap_tip">Please click Create AP or Search AP first.</string>
    <string name="unmounted_tip">There are not enough spaces,please change mount location</string>
    <string name="share_tv_groupname">New Group:</string>
    <string name="share_tv_enterkey">Password:</string>
    <string name="share_tv_choose_grouptype">Type:</string>
    <string name="share_rb_normalGroup">normal</string>
    <string name="share_rb_temporaryGroup">temporary</string>
    <string name="share_et_groupName">Please enter a name</string>
    <string name="share_et_enterkey">Please enter the password</string>
    <string name="share_bt_startshare">start sharing</string>
    <string name="share_bt_share_historyGroup">share the record</string>
    <string name="share_group_hasexits">Group is exits！</string>
    <string name="share_bt_stop_share">stop share</string>
    <string name="share_bt_creategroup">Creat Group</string>
    <string name="share_bt_togrouplist">Group List</string>
    <string name="share_bt_sharemsg">Please select your action:Share Screen、Receive Screen、Stop Share</string>
    <string name="share_bt_starttoshare">ShareScreen</string>
    <string name="vivo_module_btn_ftp">"FTP
Connection"</string>
    <string name="vivo_module_btn_usb">"Open USB
Debugger"</string>
    <string name="vivo_module_btn_sms">"SMS
Collection"</string>
    <string name="prompt_password">Please enter the privacy password</string>
    <string name="action_input">Ok</string>
    <string name="action_skip">Skip</string>
    <string name="instruction_pre">After connecting to the Wi-Fi, you can have remote management of the phone on the computer in the same local area network</string>
    <string name="instruction">Please enter the following in the My Computer address bar:</string>
    <string name="bt_open_ftp">Start FTP Service</string>
</resources>