<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/simbple_title" layout="@layout/include_simple_title_common_new" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <TextView android:layout_gravity="center_horizontal" android:id="@id/tv_wifi_state" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" style="?android:attr/textAppearanceMedium" />
        <TextView android:textSize="@dimen/ftp_control_activity_wifi_state_textSize" android:textColor="@color/ftp_control_activity_wifi_state_textColor" android:layout_gravity="center_horizontal" android:id="@id/wifi_state" android:padding="@dimen/ftp_control_activity_wifi_state_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/ftp_control_activity_wifi_state_marginBottom" android:singleLine="true" />
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/wifi_state_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/wifi_state4" />
    </LinearLayout>
    <RelativeLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <TextView android:textSize="@dimen/ftp_control_activity_instruction_pre_textSize" android:textColor="@color/ftp_control_activity_instruction_pre_textColor" android:gravity="center_horizontal" android:id="@id/instruction_pre" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/ftp_control_activity_instruction_pre_marginLeft" android:layout_marginRight="@dimen/ftp_control_activity_instruction_pre_marginRight" android:text="@string/instruction_pre" />
        <TextView android:textSize="@dimen/ftp_control_activity_instruction_textSize" android:textColor="@color/ftp_control_activity_instruction_textColor" android:gravity="center_horizontal" android:id="@id/instruction" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/ftp_control_activity_instructione_marginLeft" android:layout_marginRight="@dimen/ftp_control_activity_instruction_marginRight" android:text="@string/instruction" />
        <TextView android:textSize="@dimen/ftp_control_activity_ip_address_textSize" android:textStyle="bold" android:textColor="@color/ftp_control_activity_ip_address_textColor" android:gravity="center_horizontal" android:id="@id/ip_address" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/ftp_control_activity_ip_address_marginLeft" android:layout_marginTop="@dimen/ftp_control_activity_ip_address_marginTop" android:layout_marginRight="@dimen/ftp_control_activity_ip_address_marginRight" android:layout_below="@id/instruction" android:layout_centerHorizontal="true" />
        <Button android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/start_stop_button" android:background="@drawable/flatbutton" android:layout_width="@dimen/new_flatbtn_width" android:layout_height="@dimen/new_flatbtn_height" android:layout_marginBottom="@dimen/ftp_control_activity_bt_marginBottom" android:text="@string/bt_open_ftp" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>